--- a/webcams-server/pom.xml
+++ b/webcams-server/pom.xml
@@ -72,10 +72,13 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>3.0.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>3.1.0.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
+            <version>3.0.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>javassist</groupId>
@@ -87,7 +90,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.0.0.Final</version>
+            <version>3.6.9.Final</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
