Httpclient now configured with timeouts. IOUtils removed in favour of functionality provided by Guava.

--- a/webcams-captureloop/log4j.properties
+++ b/webcams-captureloop/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootCategory=INFO, S
 log4j.appender.S = org.apache.log4j.ConsoleAppender
 log4j.appender.S.layout = org.apache.log4j.PatternLayout
-log4j.appender.S.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %c{1} [%p] %m%n
-log4j.uk.ac.warwick.radio.media.webcams.server.RemoteWebcams=INFO, S
+log4j.appender.S.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} [%p] %c %m%n
+log4j.logger.org.apache.cxf=OFF, S
